--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        Studying Aritifical Intelligence - Linux Guru
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.jpeg'
-background:         'assets/img/wallpaper.png'
+background:         'assets/img/wallpaper.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                http://mikhailmmeskhi.me
