Testing config file

--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ social:
 # Postal address (add as many lines as necessary). Shown in footer and on Contact page.
 address:
   - lines: 
-    - Some Ave, 987,
-    - 23890, New York,
+    - W Airport Blvd, 11929,
+    - 77477, Stafford,
     - United States.
 email: michael.m.meskhi@live.com
 tel: +1 346 303 8951
