Changed my name

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ kramdown:
 ####################################
 #
 owner:
-  name: Michael
+  name: Michael M.Meskhi
   avatar: michael-logo.jpeg
   job: "Machine Learning Engineer & Researcher"
   bio: "A undergraduate machine learning engineer currently conducting research on meta-learning at University of Houston."
