--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ kramdown:
 owner:
   name: Michael M.Meskhi
   avatar: michael-logo.jpeg
-  job: "Machine Learning Engineer & Researcher"
-  bio: "A undergraduate machine learning engineer currently conducting research on meta-learning at University of Houston."
+  job: "Machine Learning Researcher"
+  bio: "A undergraduate machine learning engineer currently conducting research on meta-learning at University of Houston. Aspiring to become a great researcher & engineer!"
   email: michael.m.meskhi@live.com  
   disqus-shortname: mikhailmekhedkinmeskhi
   twitter:  #username
