--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,16 +1,11 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
-- name: Google
-  link: http://www.google.com/
-  date: July 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
-  job: Programming Internship
+- name: Pattern Analysis Lab | Univeristy of Houston
+  link: http://www2.cs.uh.edu/~vilalta/ResearchLab/
+  date: January 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  job: Undergraduate Researcher
 
-- name: Facebook
-  link: http://www.facebook.com/
-  date: May 2014 - July 2017
-  job: Web Assistant
-
-- name: SAP
-  link: https://www.sap.com/
-  date: 2010 - 2014
-  job: Software Developer
+- name: ACM Club | North American University
+  link: http://acm.na.edu
+  date: September 2017 - <i class="fa fa-clock-o" aria-hidden="true" title="Until Now"></i>
+  job: President
