--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
   name: Michael M.Meskhi
   avatar: michael-logo.jpeg
   job: "Machine Learning Researcher"
-  bio: "A undergraduate machine learning engineer currently conducting research on meta-learning at University of Houston. Aspiring to become a great researcher & engineer!"
+  bio: "I am an Junior undergraduate student working on Meta-Learning, under the supervision of advisor Dr. Ricardo Vilalta at University of Houston. Aspiring to become a great researcher & engineer!"
   email: michael.m.meskhi@live.com  
   disqus-shortname: mikhailmekhedkinmeskhi
   twitter:  #username
