--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,4 +1,14 @@
 - name: Meta-Learning
   descr: "Researching better data characterization methods for Meta-Learning. Meta-Learning is the study of principled methods that exploit meta-knowledge to obtain efficient models and solutions by adapting machine learning and data mining processes."
-  image: pong.png
+  image: /img/pattern_analysis_lab_logo.png
   github: https://github.com/michaelmmeskhi/meta-learning
+  
+- name: hackNAU Website
+  descr: "Built and maintained the hackNAU website for North American University hackathon of Fall 2017."
+  image: img/nau_acm_rice.jpg
+  github: https://github.com/HackNAU/hacknau.github.io
+  
+- name: MLRP
+  descr: "Built a machine learning system that uses supervised learning algorithms to classify resumes of top software engineers in various companies and label their skills accordingly. Next, the user uploads their resume and it is tested against the predicted hypothesis by the ML algorithms which in hand return what tier(s) you belong to. As for tiers, we divided them into two parts. Top tier, such as Google, Facebook, Amazon, IBM, etc..., and bottom tier such as local Houston companies. Unfortunately, due to time constraints we cannot provide company specific statistics according to ones resume. (We plan to offer location based ranking and statistics in the future). Another factor we included was education and improvement. After viewing the results, users can follow recommended links provided to websites where they can practice on algorithms or take online certifications that can help them stand out even further!"
+  image: img/mlrp.jpg
+  github: https://github.com/michaelmmeskhi/MLRP
