--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,7 +2,7 @@
   link: "contact"
 
 - name: "Resume"
-  link: "resume.pdf"
+  link: "Resume.pdf"
 
 - name: "Blog"
   link: "https://medium.com/@mikhailmekhedkinmeskhi"
